# Masterproef_Detection_System_Jetson

./: projectorView.sh  start_ros_nodes.sh
data/: charge_location.csv  parameters.csv  quiz_location.csv  transform.csv  zone_coordinates.csv
data/output/: dist_coeff.txt
python_scripts/camera_calibration_tabloo/: capture_and_calibrate.py  live_undistortion.py
python_scripts/camera_calibration_tabloo/output/: calibration_data.pkl  camera_matrix.txt
python_scripts/yolo_exporting/: export_yolo_engine_float16.py  export_yolo_engine_float32.py  open_camera.py  yolo_tensorrt.py
src/masterproef_interfaces/: CMakeLists.txt  package.xml
src/masterproef_interfaces/srv/: GetStitchedImage.srv
src/masterproef_nodes/: package.xml  setup.cfg  setup.py
src/masterproef_nodes/masterproef_nodes/: beamer_controller.py  calibrated_image_provider.py  charge_location_selector.py  compute_transformation.py  csv_transform_watcher.py  csv_zone_watcher.py  fast_image_stitcher.py  goal_sender.py  heartbeat_monitor.py  heartbeat_publisher.py  image_provider.py  quiz_location_selector.py  slow_image_stitcher.py  target_selector_node.py  target_selector_node_filtered.py  target_selector_node_unfiltered.py  yolo_node.py  yolo_node_dual_models.py  yolo_node_speed_test.py  zone_location_selector.py
